WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139029
background-size should not accept unitless lengths
https://bugs.webkit.org/show_bug.cgi?id=139029
Summary
background-size should not accept unitless lengths
Simon Pieters (:zcorpan)
Reported
2014-11-24 11:56:22 PST
We should limit the hashless hex color and unitless length quirks to the set of properties listed in the quirks spec:
https://quirks.spec.whatwg.org/#the-hashless-hex-color-quirk
https://quirks.spec.whatwg.org/#the-unitless-length-quirk
Why:
https://quirks.spec.whatwg.org/#goals
Gecko fixed this in 2012
https://bugzilla.mozilla.org/show_bug.cgi?id=774122
Attachments
Add attachment
proposed patch, testcase, etc.
Sam Sneddon [:gsnedders]
Comment 1
2022-07-14 15:50:04 PDT
This is:
https://wpt.fyi/results/quirks/unitless-length?label=master&label=experimental&aligned
(and the currently-all-passing
https://wpt.fyi/results/quirks/hashless-hex-color?label=experimental&label=master&aligned
)
Radar WebKit Bug Importer
Comment 2
2022-07-14 15:50:18 PDT
<
rdar://problem/97039770
>
Ahmad Saleem
Comment 3
2022-10-02 00:45:30 PDT
Safari Technology Preview 154 is still failing one case:
http://wpt.live/quirks/unitless-length/excluded-properties-002.html
> Property background-size does not support quirky length
Anne van Kesteren
Comment 4
2023-04-12 00:25:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12644
EWS
Comment 5
2023-04-12 10:19:57 PDT
Committed
262873@main
(0b6c4aa962f5): <
https://commits.webkit.org/262873@main
> Reviewed commits have been landed. Closing PR #12644 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug